@@ -1,9 +1,13 @@
-LOGDIR=$(top_builddir)/test/logs/$(CHECK_FOLDER)
+LOG_ROOT=$(top_builddir)/test/logs
+LOGDIR=$(LOG_ROOT)/$(CHECK_FOLDER)
+TEMPLATE_ROOT = $(top_srcdir)/test/templates
 XSLTENGINE= @XSLTENGINE@
 BUILT_SOURCES=$(LOGDIR)
 AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/test/include -DRESSOURCES=\"$(srcdir)/../../resources\" -DBUILD_ROOT=\"$(top_builddir)/\" -DLOGDIR=\"$(top_builddir)/test/logs\" -DSOURCE_ROOT=\"$(top_srcdir)/\"
 $(LOGDIR):
 	mkdir -p $(LOGDIR)
+$(LOG_ROOT):
+	mkdir -p $(LOG_ROOT)
 automenu:
 	@echo "Building menu entry..."
 	@subdirs='$(SUBDIRS)';\
@@ -32,11 +36,11 @@ automenu:
 	done;\
 	echo "</menu>" >> $$output_menu
 
-logreport: automenu
+logreport: automenu $(LOG_ROOT)/logresult.xsl
 	@echo "processing logs to html..."
 	@list='$(TESTS)'; \
-	srcdir='$(top_srcdir)'; \
-	xsl="$${srcdir}/test/templates/logresult.xsl" ; \
+	builddir='$(top_builddir)'; \
+	xsl="$${builddir}/test/logs/logresult.xsl" ; \
 	xsltproc='$(XSLTENGINE)';\
 	xsltproc=$${xsltproc/\%2/$$xsl};\
 	xml_siteuri='$(CHECK_ROOT)' ;\
@@ -68,15 +72,25 @@ logreport: automenu
 	torun="$${torun/\%3/$$html}";\
 	echo "running $$torun";\
 	$$torun;
+
+$(LOG_ROOT)/logresult.xsl: $(LOG_ROOT) $(TEMPLATE_ROOT)/logresult.xsl
+	cp "$(TEMPLATE_ROOT)/logresult.xsl" '$(LOG_ROOT)'/;
+
+$(LOG_ROOT)/checkTextResult.xsl: $(LOG_ROOT) $(TEMPLATE_ROOT)/checkTextResult.xsl
+	cp "$(TEMPLATE_ROOT)/checkTextResult.xsl" '$(LOG_ROOT)'/;
+
+$(LOG_ROOT)/checkReport.css: $(LOG_ROOT) $(TEMPLATE_ROOT)/checkReport.css
+	cp "$(TEMPLATE_ROOT)/checkReport.css" '$(LOG_ROOT)'/;
+
 template-copy: $(LOGDIR)
 	@echo copying template
 	@if test -d "$(top_srcdir)/test/templates/$(CHECK_FOLDER)"; then \
 	    cp "$(top_srcdir)/test/templates/$(CHECK_FOLDER)/"[^C]* '$(LOGDIR)'/;\
 	fi
-textlog:
+textlog: automenu $(LOG_ROOT)/checkTextResult.xsl
 	@echo "processing logs to text..."
-	@srcdir='$(top_srcdir)'; \
-	xsl="$${srcdir}/test/templates/checkTextResult.xsl" ; \
+	@builddir='$(top_builddir)'; \
+	xsl="$${builddir}/test/logs/checkTextResult.xsl" ; \
 	xsltproc='$(XSLTENGINE)';\
 	xsltproc="$${xsltproc/\%2/$$xsl}";\
 	xml_siteuri='$(CHECK_ROOT)' ;\
